part2/quote.yaml
apiVersion: v1
kind: Service
metadata:
    name: quote
spec:
    ports:
    -   name: http
        port: 80
        targetPort: 8080
    selector:
        app: quote
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: quote
spec:
    replicas: 1
    selector:
        matchLabels:
            app: quote
    strategy:
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: quote
        spec:
            containers:
            -   name: backend
                image: docker.io/datawire/quote:0.4.1
                ports:
                -   containerPort: 8080
